@@ -1,3 +1,11 @@
+2002-09-23  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* lily/music-constructor.cc (make_music): Add debugging info.
+
+	* scm/music-functions.scm (make-simultaneous-music,
+	(make-sequential-music, context-spec-music):
+	* scm/music-types.scm (music-descriptions): Get lily to run.
+
 2002-09-23  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
 	* lily/command-request.cc (transpose_key_alist): new function.
